Increase bottom nav z-index fix floating btn bug

--- a/scrumsisters/static/css/style.css
+++ b/scrumsisters/static/css/style.css
@@ -26,7 +26,7 @@
 /* MOBILE BOTTOM NAV BAR */
 nav#nav-bar.bottom-nav {
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     bottom: 0;
     width: 100%;
     height: 65px;
@@ -191,6 +191,7 @@ td:first-child {
   display: grid;
   grid-template: repeat(3, 150px);
   justify-items: center;
+  row-gap: 20px;
 }
 
 .team1, .team2, .add-team {
@@ -226,6 +227,7 @@ td:first-child {
 #add-bg.btn-floating.btn-large {
   background-color: var(--btn-green);
   opacity: 70%;
+  z-index: 1;
 }
 /*TEAMS.HTML*/
 
